# juniortask

./: .coverage  .env  Dockerfile  README.md  build.sh  build_files.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/: build.yml
.github/workflows/: build.yml  test-django.yml
app/app/app/: settings.py
juniortask/: admin.py
mysite/: settings.py  urls.py  wsgi.py
